--- a/Artifical Neural Networks - Multi-Layer Perceptron Hour.ipynb
+++ b/Artifical Neural Networks - Multi-Layer Perceptron Hour.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "Graphically, this can be represented as:\n",
     "\n",
-    "<img src=\"Graphics/Perceptron.png\" width=600 height=600 />\n",
+    "<img src=\"Perceptron.png\" width=600 height=600 />\n",
     "\n",
     "They can then be stacked together into a single layer and then as several layers, creating a Deep Neural Network.\n",
     "\n",
