--- a/Artifical Neural Networks - Multi-Layer Perceptron Hour.ipynb
+++ b/Artifical Neural Networks - Multi-Layer Perceptron Hour.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from keras.wrappers.scikit_learn import KerasClassifier\n",
     "\n",
-    "from IPython.display import Image"
+    "from IPython.display import Image, display"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,11 @@
     }
    ],
    "source": [
-    "from IPython.display import Image, display\n",
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"hide-input\",\n",
+    "    ]\n",
+    "}\n",
     "display(Image(filename='Graphics/Perceptron.png', embed=True))"
    ]
   },
