--- a/Artifical Neural Networks - Long-Short Term Memory Recurrent Neural Networks.ipynb
+++ b/Artifical Neural Networks - Long-Short Term Memory Recurrent Neural Networks.ipynb
@@ -91,21 +91,21 @@
     "\n",
     "A graphical representation of the RNN block looks like:\n",
     "\n",
-    "<img src=\"Graphics\\RNN Cell.png\" width=\"600\" height=\"600\" />\n",
+    "<img src=\"Graphics/RNN Cell.png\" width=\"600\" height=\"600\" />\n",
     "\n",
     "Thus, each block recieves a sequential input and an activation, calculates the next activation and prediction, and feeds the activation to the next block in the following fashion:\n",
     "\n",
-    "<img src=\"Graphics\\RNN.png\" width=\"600\" height=\"600\" />\n",
+    "<img src=\"Graphics/RNN.png\" width=\"600\" height=\"600\" />\n",
     "\n",
     "They can also be stacked to give a Deep RNN:\n",
     "\n",
-    "<img src=\"Graphics\\Deep RNN.png\" width=\"600\" height=\"600\" />\n",
+    "<img src=\"Graphics/Deep RNN.png\" width=\"600\" height=\"600\" />\n",
     "\n",
     "However, for our purposes, we are not interested in a prediction for each member of our sequence, but a single prediction after the RNN has had the opportunity to see the entire sequence. This is often call \"Many-to-One\", as the RNN receives an input of \"many\" and outputs a single final prediction, \"one\". \n",
     "\n",
     "Graphically, it is represented as:\n",
     "\n",
-    "<img src=\"Graphics\\Many to One RNN.png\" width=\"600\" height=\"600\" />"
+    "<img src=\"Graphics/Many to One RNN.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
@@ -145,7 +145,7 @@
     "\n",
     "Graphically, this looks like:\n",
     "\n",
-    "<img src=\"Graphics\\LSTM Cell.png\" width=\"600\" height=\"600\" />"
+    "<img src=\"Graphics/LSTM Cell.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
