--- a/Artificial Neural Networks - Convolutional Neural Networks Hour.ipynb
+++ b/Artificial Neural Networks - Convolutional Neural Networks Hour.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "Graphically, this can be represented as:\n",
     "\n",
-    "<img src=\"Graphics\\Convolution.png\" width=\"600\" height=\"600\" />"
+    "<img src=\"Graphics/Convolution.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "\n",
     "Graphically, this can be represented as:\n",
     "\n",
-    "<img src=\"Graphics\\CNN.png\" width=\"600\" height=\"600\" />"
+    "<img src=\"Graphics/CNN.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
