--- a/Classical Statistical Methods and eXtreme Gradient Boosting - Exponential Smoothing.ipynb
+++ b/Classical Statistical Methods and eXtreme Gradient Boosting - Exponential Smoothing.ipynb
@@ -322,7 +322,7 @@
    "source": [
     "From the decompositions, we see an obvious trend and seasonality, justifying our use of the Exponential Smoothing model. A graphic detailing the various iterations of this model follows:\n",
     "\n",
-    "<img src=\"Graphics\\ETS.png\" width=\"600\" height=\"600\" />"
+    "<img src=\"Graphics/ETS.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
