--- a/Classical Statistical Methods and eXtreme Gradient Boosting - XGBoost.ipynb
+++ b/Classical Statistical Methods and eXtreme Gradient Boosting - XGBoost.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "A simple diagram demonstrates why they have this name:\n",
     "\n",
-    "<img src=\"Graphics\\Tree.png\" width=\"600\" height=\"600\" />\n",
+    "<img src=\"Graphics/Tree.png\" width=\"600\" height=\"600\" />\n",
     "\n",
     "XGboost combines several of these CARTs to arrive at a prediction. Mathematically, this looks like:\n",
     "\n",
@@ -371,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   },
   "toc": {
    "base_numbering": 1,
