--- a/Deep Reinforcement Learning - CNN-Based Dueling Double Deep Q-Network with Prioritized Experience Replay.ipynb
+++ b/Deep Reinforcement Learning - CNN-Based Dueling Double Deep Q-Network with Prioritized Experience Replay.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "From here, we will divide our neural network up and calculate the $Q$-value as follows:\n",
     "\n",
-    "<img src=\"Graphics\\Dueling DQN.png\" width=\"600\" height=\"600\" />"
+    "<img src=\"Graphics/Dueling DQN.png\" width=\"600\" height=\"600\" />"
    ]
   },
   {
