--- a/Artifical Neural Networks - Long-Short Term Memory Recurrent Neural Networks.ipynb
+++ b/Artifical Neural Networks - Long-Short Term Memory Recurrent Neural Networks.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "Graphically, it is represented as:\n",
     "\n",
-    "<img src=\"Graphics/Many to One RNN.png\" />"
+    "<img src=\"Graphics/Many-to-One RNN.png\" />"
    ]
   },
   {
