--- a/Artifical Neural Networks - Multi-Layer Perceptron Hour.ipynb
+++ b/Artifical Neural Networks - Multi-Layer Perceptron Hour.ipynb
@@ -653,9 +653,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Reloading the model\n",
+    "# Reloading the model\n",
     "\n",
-    "# mlp_model= keras.models.load_model('Models/MLP 1H BTC.h5')"
+    "mlp_model= keras.models.load_model('Models/MLP 1H BTC.h5')"
    ]
   }
  ],
