--- a/Artifical Neural Networks - Long-Short Term Memory Recurrent Neural Networks.ipynb
+++ b/Artifical Neural Networks - Long-Short Term Memory Recurrent Neural Networks.ipynb
@@ -680,9 +680,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Saving the model\n",
+    "# Saving the model\n",
     "\n",
-    "# lstm_model.save('Models/LSTM Class 12 BTC.h5')"
+    "lstm_model.save('Models/LSTM Class 12 BTC.h5')"
    ]
   },
   {
@@ -691,9 +691,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Reloading the model\n",
+    "# Reloading the model\n",
     "\n",
-    "# lstm_class_model=model = keras.models.load_model('Models/LSTM Class 12 BTC.h5')"
+    "lstm_class_model=model = keras.models.load_model('Models/LSTM Class 12 BTC.h5')"
    ]
   }
  ],
