--- a/Artificial Neural Networks - Convolutional Neural Networks Hour.ipynb
+++ b/Artificial Neural Networks - Convolutional Neural Networks Hour.ipynb
@@ -768,9 +768,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Reloading the model\n",
+    "# Reloading the model\n",
     "\n",
-    "# cnn_model_BTC=model = keras.models.load_model('Models/CNN 1H BTC.h5')"
+    "cnn_model_BTC=model = keras.models.load_model('Models/CNN 1H BTC.h5')"
    ]
   }
  ],
