--- a/Data Matrix Creation.ipynb
+++ b/Data Matrix Creation.ipynb
@@ -1435,7 +1435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From our graphs, we decide on the first 20 PCA components"
+    "From our graphs, we decide on the first 20 PCA components."
    ]
   }
  ],
