--- a/Classical Statistical Methods and eXtreme Gradient Boosting - SARIMAX.ipynb
+++ b/Classical Statistical Methods and eXtreme Gradient Boosting - SARIMAX.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "Text(0.5, 1.0, 'BTC Price')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Text(0.5, 1.0, 'BTC Price Change')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -461,7 +461,7 @@
     }
    ],
    "source": [
-    "# Plotting seasonlity\n",
+    "# Plotting seasonality\n",
     "\n",
     "plt.rcParams.update({'figure.figsize':(10,3), 'figure.dpi':120})\n",
     "add_season=additive_decomposition.seasonal[0:70]\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,17 +615,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This SARMAX training took 716.337121963501\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start=time.time()\n",
     "model = SARIMAX(endog=y_train, exog=X_train, \n",
@@ -872,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
