--- a/Classical Statistical Methods and eXtreme Gradient Boosting - SARIMAX.ipynb
+++ b/Classical Statistical Methods and eXtreme Gradient Boosting - SARIMAX.ipynb
@@ -299,8 +299,7 @@
    "source": [
     "result = adfuller(X['Percent Change']['2021-07-02 11:00:00':])\n",
     "print('ADF Statistic for BTC Percent Change is '+str(result[0]))\n",
-    "print('p-value for BTC Percent Change is ' +str(result[1]))\n",
-    "print('\\n')"
+    "print('p-value for BTC Percent Change is ' +str(result[1]))"
    ]
   },
   {
